# simulador-automatasF

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Datos.csv  Datos1.csv  Datos5.csv  Datos6.csv  Datos7.csv  Makefile  README.md  TAD_string.h  TAD_upla.h  Tad_data.c  Tad_data.h  cmake_install.cmake  simulador_automata  test_str
.cmake/api/v1/reply/: cache-v2-d4e8c6124c297aedc932.json  cmakeFiles-v1-9c65fa40677baf12d848.json  codemodel-v2-4b1a095c56de4dcb273f.json  index-2026-05-24T04-31-43-0091.json  target-simulador_automata-Debug-44e801261f7351d5b919.json
includes/: TAD_automata.h  TAD_data.h  TAD_string.h  TAD_upla.h
src/: TAD_automata.c  TAD_data.c  TAD_string.c  TAD_upla.c  main.c  test_data.c  test_string.c
tests/: ALista de automatas.txt  Datos3.csv  Datos4.csv
